k8s/overlays/prod-release-internal-tls-orchestrator-smart-home-service/smart-home-ingress-from-orchestrator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smart-home-ingress-from-orchestrator
spec:
  podSelector:
    matchLabels:
      app: smart-home-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: orchestrator
      ports:
        - protocol: TCP
          port: 8086
